add some oom test in yanjiao